cmake_minimum_required(VERSION 3.9)
project(LeetCode)
set(CMAKE_CXX_STANDARD 11)

aux_source_directory(leetcode/editor/cn/include LEETCODE)
add_library(leetcode ${LEETCODE})
LINK_LIBRARIES(leetcode)

add_executable(1-two-sum leetcode/editor/cn/1-two-sum.cpp)
add_executable(2-add-two-numbers leetcode/editor/cn/2-add-two-numbers.cpp)
add_executable(26-remove-duplicates-from-sorted-array leetcode/editor/cn/26-remove-duplicates-from-sorted-array.cpp)
add_executable(5-longest-palindromic-substring leetcode/editor/cn/5-longest-palindromic-substring.cpp)
add_executable(121-best-time-to-buy-and-sell-stock leetcode/editor/cn/121-best-time-to-buy-and-sell-stock.cpp)
add_executable(34-find-first-and-last-position-of-element-in-sorted-array leetcode/editor/cn/34-find-first-and-last-position-of-element-in-sorted-array.cpp)
add_executable(38-count-and-say leetcode/editor/cn/38-count-and-say.cpp)
add_executable(122-best-time-to-buy-and-sell-stock-ii leetcode/editor/cn/122-best-time-to-buy-and-sell-stock-ii.cpp)
add_executable(123-best-time-to-buy-and-sell-stock-iii leetcode/editor/cn/123-best-time-to-buy-and-sell-stock-iii.cpp)
add_executable(309-best-time-to-buy-and-sell-stock-with-cooldown leetcode/editor/cn/309-best-time-to-buy-and-sell-stock-with-cooldown.cpp)
add_executable(714-best-time-to-buy-and-sell-stock-with-transaction-fee leetcode/editor/cn/714-best-time-to-buy-and-sell-stock-with-transaction-fee.cpp)
add_executable(188-best-time-to-buy-and-sell-stock-iv leetcode/editor/cn/188-best-time-to-buy-and-sell-stock-iv.cpp)
add_executable(187-repeated-dna-sequences leetcode/editor/cn/187-repeated-dna-sequences.cpp)
add_executable(101-symmetric-tree leetcode/editor/cn/101-symmetric-tree.cpp)
add_executable(226-invert-binary-tree leetcode/editor/cn/226-invert-binary-tree.cpp)
add_executable(6-zigzag-conversion leetcode/editor/cn/6-zigzag-conversion.cpp)
add_executable(334-increasing-triplet-subsequence leetcode/editor/cn/334-increasing-triplet-subsequence.cpp)
add_executable(287-find-the-duplicate-number leetcode/editor/cn/287-find-the-duplicate-number.cpp)
add_executable(289-game-of-life leetcode/editor/cn/289-game-of-life.cpp)
add_executable(56-merge-intervals leetcode/editor/cn/56-merge-intervals.cpp)
add_executable(57-insert-interval leetcode/editor/cn/57-insert-interval.cpp)
add_executable(36-valid-sudoku leetcode/editor/cn/36-valid-sudoku.cpp)
add_executable(35-search-insert-position leetcode/editor/cn/35-search-insert-position.cpp)
add_executable(278-first-bad-version leetcode/editor/cn/278-first-bad-version.cpp)
add_executable(350-intersection-of-two-arrays-ii leetcode/editor/cn/350-intersection-of-two-arrays-ii.cpp)
add_executable(374-guess-number-higher-or-lower leetcode/editor/cn/374-guess-number-higher-or-lower.cpp)
add_executable(171-excel-sheet-column-number leetcode/editor/cn/171-excel-sheet-column-number.cpp)
add_executable(205-isomorphic-strings leetcode/editor/cn/205-isomorphic-strings.cpp)
add_executable(242-valid-anagram leetcode/editor/cn/242-valid-anagram.cpp)
add_executable(290-word-pattern leetcode/editor/cn/290-word-pattern.cpp)
add_executable(104-maximum-depth-of-binary-tree leetcode/editor/cn/104-maximum-depth-of-binary-tree.cpp)
add_executable(168-excel-sheet-column-title leetcode/editor/cn/168-excel-sheet-column-title.cpp)
add_executable(389-find-the-difference leetcode/editor/cn/389-find-the-difference.cpp)
add_executable(125-valid-palindrome leetcode/editor/cn/125-valid-palindrome.cpp)
add_executable(225-implement-stack-using-queues leetcode/editor/cn/225-implement-stack-using-queues.cpp)
add_executable(108-convert-sorted-array-to-binary-search-tree leetcode/editor/cn/108-convert-sorted-array-to-binary-search-tree.cpp)
add_executable(232-implement-queue-using-stacks leetcode/editor/cn/232-implement-queue-using-stacks.cpp)
add_executable(191-number-of-1-bits leetcode/editor/cn/191-number-of-1-bits.cpp)
add_executable(110-balanced-binary-tree leetcode/editor/cn/110-balanced-binary-tree.cpp)
add_executable(111-minimum-depth-of-binary-tree leetcode/editor/cn/111-minimum-depth-of-binary-tree.cpp)
add_executable(344-reverse-string leetcode/editor/cn/344-reverse-string.cpp)
add_executable(371-sum-of-two-integers leetcode/editor/cn/371-sum-of-two-integers.cpp)
add_executable(387-first-unique-character-in-a-string leetcode/editor/cn/387-first-unique-character-in-a-string.cpp)
add_executable(118-pascals-triangle leetcode/editor/cn/118-pascals-triangle.cpp)
add_executable(141-linked-list-cycle leetcode/editor/cn/141-linked-list-cycle.cpp)
add_executable(155-min-stack leetcode/editor/cn/155-min-stack.cpp)
add_executable(160-intersection-of-two-linked-lists leetcode/editor/cn/160-intersection-of-two-linked-lists.cpp)
add_executable(172-factorial-trailing-zeroes leetcode/editor/cn/172-factorial-trailing-zeroes.cpp)
add_executable(234-palindrome-linked-list leetcode/editor/cn/234-palindrome-linked-list.cpp)
add_executable(237-delete-node-in-a-linked-list leetcode/editor/cn/237-delete-node-in-a-linked-list.cpp)
add_executable(412-fizz-buzz leetcode/editor/cn/412-fizz-buzz.cpp)
add_executable(206-reverse-linked-list leetcode/editor/cn/206-reverse-linked-list.cpp)
add_executable(326-power-of-three leetcode/editor/cn/326-power-of-three.cpp)
add_executable(202-happy-number leetcode/editor/cn/202-happy-number.cpp)
add_executable(204-count-primes leetcode/editor/cn/204-count-primes.cpp)
add_executable(283-move-zeroes leetcode/editor/cn/283-move-zeroes.cpp)
add_executable(190-reverse-bits leetcode/editor/cn/190-reverse-bits.cpp)
add_executable(347-top-k-frequent-elements leetcode/editor/cn/347-top-k-frequent-elements.cpp)
add_executable(8-string-to-integer-atoi leetcode/editor/cn/8-string-to-integer-atoi.cpp)
add_executable(15-3sum leetcode/editor/cn/15-3sum.cpp)
add_executable(17-letter-combinations-of-a-phone-number leetcode/editor/cn/17-letter-combinations-of-a-phone-number.cpp)
add_executable(105-construct-binary-tree-from-preorder-and-inorder-traversal leetcode/editor/cn/105-construct-binary-tree-from-preorder-and-inorder-traversal.cpp)
add_executable(22-generate-parentheses leetcode/editor/cn/22-generate-parentheses.cpp)
add_executable(23-merge-k-sorted-lists leetcode/editor/cn/23-merge-k-sorted-lists.cpp)
add_executable(19-remove-nth-node-from-end-of-list leetcode/editor/cn/19-remove-nth-node-from-end-of-list.cpp)
add_executable(29-divide-two-integers leetcode/editor/cn/29-divide-two-integers.cpp)
add_executable(3-longest-substring-without-repeating-characters leetcode/editor/cn/3-longest-substring-without-repeating-characters.cpp)
add_executable(816-ambiguous-coordinates leetcode/editor/cn/816-ambiguous-coordinates.cpp)
add_executable(33-search-in-rotated-sorted-array leetcode/editor/cn/33-search-in-rotated-sorted-array.cpp)
add_executable(116-populating-next-right-pointers-in-each-node leetcode/editor/cn/116-populating-next-right-pointers-in-each-node.cpp)
add_executable(230-kth-smallest-element-in-a-bst leetcode/editor/cn/230-kth-smallest-element-in-a-bst.cpp)
add_executable(98-validate-binary-search-tree leetcode/editor/cn/98-validate-binary-search-tree.cpp)
add_executable(297-serialize-and-deserialize-binary-tree leetcode/editor/cn/297-serialize-and-deserialize-binary-tree.cpp)
add_executable(341-flatten-nested-list-iterator leetcode/editor/cn/341-flatten-nested-list-iterator.cpp)
add_executable(322-coin-change leetcode/editor/cn/322-coin-change.cpp)
add_executable(198-house-robber leetcode/editor/cn/198-house-robber.cpp)
add_executable(215-kth-largest-element-in-an-array leetcode/editor/cn/215-kth-largest-element-in-an-array.cpp)
add_executable(10-regular-expression-matching leetcode/editor/cn/10-regular-expression-matching.cpp)
add_executable(12-integer-to-roman leetcode/editor/cn/12-integer-to-roman.cpp)
add_executable(142-linked-list-cycle-ii leetcode/editor/cn/142-linked-list-cycle-ii.cpp)
add_executable(315-count-of-smaller-numbers-after-self leetcode/editor/cn/315-count-of-smaller-numbers-after-self.cpp)
add_executable(307-range-sum-query-mutable leetcode/editor/cn/307-range-sum-query-mutable.cpp)
add_executable(218-the-skyline-problem leetcode/editor/cn/218-the-skyline-problem.cpp)